--- a/src/app/leaflet-map/leaflet-map.component.css
+++ b/src/app/leaflet-map/leaflet-map.component.css
@@ -160,6 +160,17 @@ h4{
   padding : 5px 7.5px;
 }
 
+::ng-deep #classification-route-div{
+  width: 100%;
+  text-align: center;
+}
+
+::ng-deep #classification{
+  padding-left: 5px;
+  font-size: 200%;
+  margin-bottom: 10px
+}
+
 ::ng-deep #save-route-div{
   width: 100%;
   text-align: center;
@@ -168,8 +179,18 @@ h4{
 ::ng-deep #save-route-button{
   cursor : pointer;
   padding : 5px 7.5px;
-  width: 80%;
+  width: 45%;
   margin-bottom: 10px;
+  color: white;
+}
+
+::ng-deep #share-route-button{
+  cursor : pointer;
+  padding : 5px 7.5px;
+  width: 20%;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  color: white;
 }
 
 ::ng-deep .inst-container ul{
