--- a/src/app/leaflet-map/leaflet-map.component.html
+++ b/src/app/leaflet-map/leaflet-map.component.html
@@ -93,8 +93,6 @@
                 <button type="submit" class="btn btn-default btn-sm" id="calculate-button">Calculate</button>
               </div>
             </div>
-            
-
           </form>
         </div>
 
@@ -104,6 +102,12 @@
           </div>
           <div id="toolbar-routes-container" class="panel-info">
           </div>
+        </div>
+
+        <div class="container-fluid" id="toolbar-my-itineraries" style='display:none;padding:0px'>  
+            <div id="toolbar-my-itineraries" class="container-fluid">
+                <h4>My Itineraries</h4>
+            </div>
         </div>
         
         
