--- a/src/app/leaflet-map/leaflet-map.component.css
+++ b/src/app/leaflet-map/leaflet-map.component.css
@@ -160,26 +160,23 @@ h4{
   padding : 5px 7.5px;
 }
 
-::ng-deep #classification-route-div{
-  width: 100%;
-  text-align: center;
-}
-
 ::ng-deep #classification{
-  padding-left: 5px;
+  padding-left: 0px;
   font-size: 200%;
-  margin-bottom: 10px
+  margin-bottom: 10px;
+  margin-right: 10px;
 }
 
 ::ng-deep #save-route-div{
   width: 100%;
   text-align: center;
+  padding: 0px;
 }
 
 ::ng-deep #save-route-button{
   cursor : pointer;
   padding : 5px 7.5px;
-  width: 45%;
+  width: 25%;
   margin-bottom: 10px;
   color: white;
 }
@@ -190,6 +187,7 @@ h4{
   width: 20%;
   margin-bottom: 10px;
   margin-right: 10px;
+  margin-left: 10px;
   color: white;
 }
 
@@ -248,10 +246,16 @@ button, input, select, textarea, option{
 }
 #options-button,#timepicker{
   position: absolute;
+  /* right: 15px; */
+}
+
+#my-itineraries-button{
+  position: absolute;
   right: 15px;
 }
 
-#toolbar-routes,#toolbar-sensor-info,#toolbar-sensor-health,#toolbar-form,#toolbar-pollen-info,#toolbar-weather-info{
+
+#toolbar-routes,#toolbar-sensor-info,#toolbar-sensor-health,#toolbar-form,#toolbar-pollen-info,#toolbar-weather-info, #toolbar-my-itineraries{
   margin: 0% 0px 3% 0px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
