--- a/src/app/leaflet-map/leaflet-map.component.html
+++ b/src/app/leaflet-map/leaflet-map.component.html
@@ -105,8 +105,10 @@
         </div>
 
         <div class="container-fluid" id="toolbar-my-itineraries" style='display:none;padding:0px'>  
-            <div id="toolbar-my-itineraries" class="container-fluid">
+            <div class="container-fluid">
                 <h4>My Itineraries</h4>
+            </div>
+            <div id="toolbar-my-itineraries-container" class="panel-info">
             </div>
         </div>
         
