--- a/src/app/leaflet-map/leaflet-map.component.css
+++ b/src/app/leaflet-map/leaflet-map.component.css
@@ -268,6 +268,7 @@ button, input, select, textarea, option{
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   background-color: white;
   text-align: justify;
+  margin-bottom: 3%;
 }
 
 #toolbar-pois-table:hover,#toolbar-routes:hover,#toolbar-sensor-info:hover,#toolbar-sensor-health:hover,#toolbar-form:hover,#toolbar-pollen-info:hover,#toolbar-weather-info:hover {
